--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Hello world action step
       id: hello
       #uses: actions/hello-world-docker-action@v1
-      uses: docker://techmasat/uwr_ros:latest
+      uses: docker://techmasat/uwr_ubuntu:latest
       with:
         who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
